# HDiff-lib

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
dep/lzma/C/: 7zCrc.c  LzFind.c  Sha256.c  XzEnc.c
include/hdiff/: hdiffpatch.h
src/: checksum_plugin.h  diff.cpp  diff.h  match_block.cpp  match_block.h  patch.c  patch.h  patch_private.h  patch_types.h
src/parallel/: parallel_channel.cpp  parallel_channel.h  parallel_import.cpp  parallel_import.h
src/private_diff/: bytes_rle.cpp  bytes_rle.h  compress_detect.cpp  compress_detect.h  mem_buf.h  pack_uint.h  qsort_parallel.h  suffix_string.cpp  suffix_string.h
src/private_diff/libdivsufsort/: config.h  divsufsort.c.inc.h  divsufsort.cpp  divsufsort.h  divsufsort64.cpp  divsufsort64.h  divsufsort_private.h  sssort.c.inc.h  trsort.c.inc.h
src/private_diff/limit_mem_diff/: adler_roll.c  adler_roll.h  bloom_filter.h  covers.h  digest_matcher.cpp  digest_matcher.h  stream_serialize.cpp  stream_serialize.h
